# rtran

./: Cargo.toml  README.org  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Navigation.vue
src/router/: index.ts
src/views/: IndexView.vue  LoginView.vue
