[package]
name = "rtran"
version = "0.1.0"
edition = "2021"
authors = ["VainJoker <vainjoker@tuta.io>"]
license = "GPL-3.0-or-later"

description = "A tool to translate chinese"
readme = "README.org"
homepage = "https://github.com/VainJoker/rtran"
repository = "https://github.com/VainJoker/rtran"
keywords = ["cli", "translate", "demo", "toy"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version ="1.0.104", features = ["derive"] }
serde_json ="1.0.48"
clap = { version = "3.0.5", features = ["derive"] }
